--- a/style/_menu.scss
+++ b/style/_menu.scss
@@ -1,8 +1,6 @@
 section.menuScreen {
-    padding-top: 5%;
     max-width: 80rem;
     margin: auto;
-    height: 100%;
 }
 
 .menuItems {
@@ -19,7 +17,13 @@ h4 {
     font-family: $benoa;
     color: $redColor;
     font-size: 2rem;
-    line-height: -1;
+    line-height: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+.row1 {
+    margin-right: 1rem;
 }
 
 h5 {
@@ -27,6 +31,7 @@ h5 {
     text-transform: uppercase;
     color: white;
     font-size: 1rem;
+    padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 
@@ -37,4 +42,8 @@ p.itemDesc {
     font-size: 0.8rem;
     flex-basis: 100%;
     padding-bottom: 1rem;
+}
+
+section.menuScreen .leftBox {
+    padding-left: 0;
 }
